--- a/Project2/README
+++ b/Project2/README
@@ -17,6 +17,16 @@ How to run:
 		
 		- Alternatively, to run all the tests execute 'make run_all'. This will execute a python script that runs through the test directory and executes all tests. This same script will try to start the graph generator to produce the graphs for the given test.
 		
+Command Line Parameters:
+	-s <.ini files>+
+		- The settings files are loaded in order. Identical settings in later files will overwrite previous ones.
+		
+	-t <trace files>+
+		- This is a list of trace files to execute. These are loaded in-order before any specified in the settings file/s.
+		
+	Overriding Settings (shortcut to using multiple ini files)
+		Section:Option:new_value
+
 Test Outputs:
 	All tests output their results to a directory with the same name but stored under bin/test_results/<testname>/
 		
@@ -32,5 +42,5 @@ Note on Python Scripts:
 	Matplotlib:
 		Using apt again 'apt-get install python-matplotlib'
 		
-	This is not required for our project to work correctly, only so that the automated graph generation works correctly. We could have compiled but the project would become platform dependent and the smallest executable we could make was ~15MB.
+	This is not required for our project to work correctly, only so that the automated graph generation works correctly. We could have compiled this script but the project would become platform dependent and the smallest executable we could make was ~15MB.
 		
