Forgot to add readme.

--- a/Project3/README
+++ b/Project3/README
@@ -29,14 +29,18 @@ Completed Extra-Credits:
 	Find utility
 	
 	Symbolic links
-	- Symbolic links are created with a new kernel function called symlink with an identical interface to the
-	original Kernel::link method. A new type S_IFSYM was created for symlinks. If this inode type is
-	encountered while traversing inodes it is dereferenced recursively. An additional parameter (given a default
-	value) was added to findIndexNode to allow symlinks on the end of a path to not be dereferenced. This is
-	useful for the user space utility ls so that it can dispay the symlink rather than the item it points to.
+		- Symbolic links are created with a new kernel function called symlink with an identical interface to the
+		original Kernel::link method. A new type S_IFSYM was created for symlinks. If this inode type is
+		encountered while traversing inodes it is dereferenced recursively. An additional parameter (given a default
+		value) was added to findIndexNode to allow symlinks on the end of a path to not be dereferenced. This is
+		useful for the user space utility ls so that it can dispay the symlink rather than the item it points to.
 
-	A new option -r was added to ls which will dereference any symbolic links.
+		- A new option -r was added to ls which will dereference any symbolic links.
+		- To create symbolic links using ln, add the -s parameter after the two paths
 
 
 Python Testing Harness:
 	Look at src/tests/README for information on this script and how to make your own tests.
+
+	The only dependency to use this script is a python interpreter version 2.6+ and it should
+	be located in /usr/bin/python.
